--- a/public/video.html
+++ b/public/video.html
@@ -6,20 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>リピート動画</title>
     <meta name="robots" content="noindex" />
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        height: 100vh;
-      }
-
-      iframe {
-        border: none;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
   </head>
   <body>
     <div class="container">
@@ -27,6 +13,7 @@
         id="video"
         src=""
         frameborder="0"
+        width="300px"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen
       ></iframe>
